Builder and streams, 20.02.